--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/paw
+spring.datasource.url=jdbc:postgresql://localhost:5432/security2
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
@@ -9,6 +9,8 @@ spring.jpa.show-sql=true
 
  
 
-server.servlet.context-path=/API/v1.0/Matricula
-server.port=8080
+server.servlet.context-path=/API/v1.0/seguridad
+server.port=8083
 
+app.jwtSemilla=semilla123
+app.jwtExpirationMs=100000
